--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.7.5
   image_picker: ^1.1.1
   cached_network_image: ^3.3.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
