--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.1
   cached_network_image: ^3.3.1
   intl: ^0.19.0
+  easy_image_viewer: ^1.5.0
 
 dev_dependencies:
   flutter_test:
