--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   cached_network_image: ^3.3.1
   intl: ^0.19.0
   easy_image_viewer: ^1.5.0
+  video_player: ^2.8.6
+  chewie: ^1.8.1
+  video_thumbnail: ^0.5.3
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
