--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   path_provider: ^2.1.3
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  uuid: ^4.4.0
+  multi_select_flutter: ^4.1.3
+  roundcheckbox: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -94,6 +97,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    - family: Caros
+      fonts:
+        - asset: assets/fonts/Caros.otf
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Regular.ttf
