--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   uuid: ^4.4.0
   multi_select_flutter: ^4.1.3
   roundcheckbox: ^2.0.5
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
