--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   multi_select_flutter: ^4.1.3
   roundcheckbox: ^2.0.5
   photo_view: ^0.15.0
+  image_cropper: ^6.0.0
 
 dev_dependencies:
   flutter_test:
