--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   roundcheckbox: ^2.0.5
   photo_view: ^0.15.0
   image_cropper: ^6.0.0
+  blurhash_ffi: ^1.2.6
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
