--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   image_cropper: ^6.0.0
   blurhash_ffi: ^1.2.6
   shared_preferences: ^2.2.3
+  onesignal_flutter: ^5.2.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
